<resources>
    <string name="app_name">Fusion_Wallpapers_Ringtones</string>
    <string name="next">Next</string>
    <string name="start">Start</string>

    <string name="boarding_desc_1">Get amazing live wallpaper options for your home screen and make your phone’s look stunning and interactive!</string>
    <string name="boarding_desc_2">want To Get Unique Ringtones? Choose from Different Tunes, Trending Sounds and Popular Music!</string>
    <string name="boarding_desc_3">Choose from a variety of awesome and colourful keyboard styles made just for you to make your typing experience fun</string>
    <string name="boarding_title_1">LIVE WALLPAPER</string>
    <string name="boarding_title_2">RINGTONES</string>
    <string name="boarding_title_3">KEYBOARD</string>
    <string name="tmc_"><u>Terms &amp; Condition</u></string>
    <string name="privacy_"><u>Privacy Policy</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions">Posting rules you should be taking care of before you start interaction on our application: Cartoon Color Color for Kids \n
        \nAssuring you carry the rights and eligibility to post any form of content you are about to share. We never permit nudism on application.\n    \n
        We won\'t allow posting of sexually explicit content, sexually explicit text, images, or audio content depicting extreme sexual acts such as acts of posting Content that drives traffic to pornographic online services. Please note that we may make exceptions based on artistic, educational, historical, documentary, or scientific nature, or where there are other considerable benefits to the public at large.\n    \n
        We don\'t permit encouragement or applaud towards terrorism, formed crime scenes or hate association groups on our application. Attempting to sell sexual services or weapons and harmful drugs are also not permitted. We will remove reasonable threats of severity, hate arousing content/speech and the intentionally pointing of private individuals. We do not permit attacks/abuse based on skin colour, native, sex, gender, gender identity, sexual orientation, religion, disability or disease.\n  \n  Graphic violence is not allowed and we may remove videos or images of intense, graphic violence to make sure our application stays appropriate for everyone.\n\n
        If anyone or any account is spotted doing the above restricted activities they can be booked and arrested for the same. If viewers spot any violations of the above rules they have the right to report the content to us by using the report feature given in our application/ website.</string>

</resources>